<resources>
    <string name="app_name">EcoRecicla</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="icon_power">Power Icon</string>
    <string name="icon_notification">Notification Icon</string>
    <string name="banner_description">Banner de Bienvenida</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="map">Mapa</string>
    <string name="statistics">Estadísticas</string>
    <string name="tips">Tips</string>
    <string name="my_text">ECO</string>
    <string name="my_text2">Recicla</string>
    <string name="my_text3">Empresas</string>
    <string name="my_text4">Árbol Verde SAS</string>
    <string name="my_text4.1">Dirección: Calle 71b sur #14 55 Localidad ciudad Bolívar</string>
    <string name="my_text4.2">Teléfonos: 310 870 10 73 - 312 516 32 50</string>
    <string name="my_text4.3">Correo Electrónico: contacto@reciclajearbolverde.com</string>
    <string name="my_text5">Asociación Nacional de Recicladores</string>
    <string name="my_text5.1">Dirección: Diagonal 31B Sur # 26A - 83 Barrio el Libertador (Bogotá D.C.)</string>
    <string name="my_text5.2">Teléfonos: (57+1) 905 49 97</string>
    <string name="my_text5.3">Correo Electrónico: anrrecicladores@gmail.com</string>
    <string name="my_text6">Ecopositiva</string>
    <string name="my_text6.1">Dirección:  CALLE 18 # 65 B – 80, BOGOTÁ D.C., COLOMBIA</string>
    <string name="my_text6.2">Teléfonos:  (601) 390 57 89 – +57 305 304 1093</string>
    <string name="my_text6.3">Correo Electrónico: m.giraldo@ecopositiva.com, a.rojas@ecopositiva.com</string>
    <string name="identificacion_datos">Identificación de datos </string>
    <string name="identificacion_datos1">¿Cuál tipo de material vas a registrar hoy?</string>
    <string name="identificacion_datos2">Materiales Reciclados</string>"
    <string name="title_activity_main2">MainActivity2</string>
    <string name="my_text7">Acebri</string>
    <string name="my_text7.1">Dirección: Carrera 1 N° 3 -52 Bodega 11 -Barrio El Lucero, Parque Industrial TECPLAS, Mosquera, Cundinamarca – Colombia</string>
    <string name="my_text7.2">Teléfonos: 601 894 1001 - 57 316 286 3685</string>
    <string name="my_text8">MUTA</string>
    <string name="my_text8.1">Dirección: CARRERA 53 3 5, GALAPA, ATLANTICO</string>
    <string name="my_text8.2">Teléfono: 3213677898</string>
    <string name="my_text9">Reciclaje Capital</string>
    <string name="my_text9.1">Dirección: Calle 15 # 1A – 70, Funza Cundinamarca, CP 250020</string>
    <string name="my_text9.2">Teléfono: 300 4565829</string>
    <string name="my_text9.3">Correo Electrónico: gerencia@reciclajecapital.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>