<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo_degradado">

    <!-- res/layout/activity_main.xml -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="102dp">



        <TextView
            android:id="@+id/textone"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="81dp"
            android:layout_marginTop="63dp"
            android:layout_marginBottom="605dp"
            android:background="@drawable/textview_border"
            android:fontFamily=""
            android:text="@string/my_text"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="206dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="606dp"
            android:background="@drawable/textview_border"
            android:fontFamily=""
            android:text="@string/my_text2"
            android:textColor="@color/verde"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="67dp"
            android:layout_marginTop="166dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="522dp"
            android:background="@drawable/textview_border"
            android:fontFamily=""
            android:text="@string/identificacion_datos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="71dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="151dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="188dp"
            android:layout_marginBottom="625dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hojita" />

        <ImageView
            android:id="@+id/imagepingui"
            android:layout_width="327dp"
            android:layout_height="237dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="273dp"
            android:contentDescription="imagenpinguino"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/pinguinito1" />

        <Button
            android:id="@+id/btnNavigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="190dp"
            android:layout_marginTop="354dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="329dp"
            android:fontFamily=""
            android:text="Añadir Material"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorLink="@color/verde"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_add"
            app:iconPadding="@dimen/cardview_compat_inset_shadow" />

        <TextView
            android:id="@+id/identext2"
            android:layout_width="340dp"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="476dp"
            android:layout_marginBottom="223dp"
            android:background="@drawable/textview_border"
            android:fontFamily=""
            android:text="@string/identificacion_datos2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageButton
            android:id="@+id/iconosum2"
            android:layout_width="74dp"
            android:layout_height="62dp"
            android:layout_marginTop="160dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#23FFFEFE"
            android:cropToPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="iconosumar"
            app:srcCompat="@android:drawable/ic_menu_add" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>